# whisper.apr

./: .bashrsignore  .gitignore  .pmat-metrics.toml  .renacer.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  qa_runner.py
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: benchmark.yml  ci.yml
.pmat/: comply.toml  project.toml
.pmat-metrics/: commit-2bde761-meta.json  commit-54f3a8b-meta.json  commit-6b79a32-meta.json  commit-7c46e22-meta.json  commit-7e2851c-meta.json  commit-807eb59-meta.json  commit-a17a5b5-meta.json  commit-a2af592-meta.json  commit-a57625d-meta.json  commit-a78db98-meta.json  commit-cc54300-meta.json
.pmat-qa/WAPR-CLI-002/: checklist.yaml
benches/: cli_benchmarks.rs  format_comparison.rs  inference.rs  pipeline.rs  streaming_latency.rs  wasm_simd.rs
book/: README.md  book.toml
book/book/: 404.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/src/: SUMMARY.md  introduction.md
demos/: .pmat-metrics.toml  .pmatignore  Cargo.toml  Makefile  README.md  a11y.yaml  baseline.json  browsers.yaml  chaos.yaml  load-test-results.json  load-test.yaml  package-lock.json  package.json  probar-results.json  sla.yaml
demos/.pmat/: project.toml
demos/docs/roadmaps/: roadmap.yaml
demos/playbooks/: benchmark-tui.yaml  ground-truth-validation.yaml  realtime-transcription.yaml  realtime-translation.yaml  test-transcription-flow.yaml  upload-transcription.yaml  upload-translation.yaml
demos/realtime-transcription/: Cargo.toml  index.html
demos/realtime-transcription/src/: bridge.rs  lib.rs  worker.rs
demos/realtime-transcription/tests/: probar_tests.rs
demos/realtime-translation/: Cargo.toml
demos/realtime-translation/src/: lib.rs
demos/realtime-translation/tests/: probar_tests.rs
demos/recordings/: edge-long-audio.json  error-microphone-denied.json  happy-path.json
demos/test-audio/: README.md  test-speech-1.5s.wav.txt
demos/tests/: Cargo.toml  README.md  quality_gates.rs
demos/tests/examples/: coverage_pattern.rs  uat_browser.rs
demos/tests/src/: benchmark_tui_tests.rs  browser_tests.rs  lib.rs  performance_tests.rs  pixel_tests.rs  quality_gates.rs  transcription_test.rs  tui_render_tests.rs  zero_js_tests.rs
demos/upload-transcription/: Cargo.toml
demos/upload-transcription/src/: lib.rs
demos/upload-transcription/tests/: probar_tests.rs
demos/upload-translation/: Cargo.toml
demos/upload-translation/src/: lib.rs
demos/upload-translation/tests/: probar_tests.rs
demos/worker-transcription/: Cargo.toml
demos/worker-transcription/src/: lib.rs
demos/www/: index.html  realtime-transcription.html  realtime-translation.html  upload-transcription.html  upload-translation.html
demos/www-demo/: Cargo.toml
demos/www-demo/src/: lib.rs
demos/www/docs/roadmaps/: roadmap.yaml
demos/www/realtime-transcription/: pkg
demos/www/realtime-translation/: pkg
demos/www/upload-transcription/: pkg
demos/www/upload-translation/: pkg
docs/qa/: async-worker-probar-running-demo-100pt-poppian-falsify-checklist.md  checklist_source.md  decode-qa-bug.md  falsification_report.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: WAPR-DECODE-001.md  WAPR-GROUND-TRUTH-001.md  WAPR-MEL-001-filterbank-embedding.md  WAPR-TRANS-001-pipeline-falsification.md  WAPR-TUI-001-pipeline-visualization.md  async-worker-probar-running-demo.md  benchmark-whisper-steps-a-z.md  cli-tui-spec.md  e2e-cli-validation.md  ground-truth-whisper-apr-cpp-hugging-face.md  optimize-wasm-SIMD-GPU-story.md  wapr-cli-003-spec.md  whisper-cli-parity.md  whisper.apr-wasm-first-spec.md
examples/: backend_test.rs  basic_transcription.rs  benchmark_pipeline.rs  benchmark_tui.rs  check_biases.rs  check_decoder_tensors.rs  check_filterbank_scale.rs  check_ln_weights.rs  check_mel.rs  check_model_filterbank.rs  cli_usage.rs  compare_apr_ln.rs  compare_encoder_hf.rs  compare_filterbank.rs  compare_hf_outputs.rs  compare_hf_padded.rs  compare_hidden_states.rs  compare_mel.rs  compare_mel_exact.rs  compare_mel_hf.rs  compare_models.rs  component_timing.rs  debug_attention_mask_fix.rs  debug_attn_entropy.rs  debug_attn_scores.rs  debug_conv_layout.rs  debug_conv_stem_h25.rs  debug_cross_attn.rs  debug_cross_attn_live.rs  debug_decode_loop.rs  debug_decoder.rs  debug_decoder_cross_attn.rs  debug_decoder_hidden.rs  debug_enc_pos_embed.rs  debug_encoder_output.rs  debug_end_positions.rs  debug_fft_norm.rs  debug_fft_scale.rs  debug_filterbank.rs  debug_forward_one.rs  (+61 more)
playbooks/: whisper-pipeline.yaml
proptest-regressions/audio/: mel.txt
proptest-regressions/tokenizer/: mod.txt
scripts/: capture_golden_traces.sh  compare_hf_weights.sh  dump_cross_attn_golden.py  extract_filterbank.sh  ground_truth_compare.rs  ground_truth_compare.sh  ground_truth_config.sh  ground_truth_test.sh  run_benchmark_qa.sh  run_falsification_tests.sh
src/: benchmark.rs  detection.rs  error.rs  lib.rs  memory.rs  parallel.rs  progress.rs  simd.rs  timestamps.rs  trace.rs  vad.rs
src/audio/: batch.rs  mel.rs  mel_filterbank_data.rs  mod.rs  resampler.rs  ring_buffer.rs  streaming.rs  wav.rs
src/backend/: mod.rs  selector.rs  traits.rs
src/cli/: args.rs  commands.rs  mod.rs  model_loader.rs  output.rs  parity.rs
src/diarization/: clustering.rs  embedding.rs  mod.rs  segmentation.rs
src/format/: checksum.rs  compress.rs  mod.rs  validation.rs
src/gpu/: buffer.rs  capabilities.rs  detect.rs  device.rs  error.rs  mod.rs  (+1 more)
test_data/: ANALYSIS.md  format_comparison.json  mel_spectrogram.json  ref_a_audio.json  ref_b_filterbank.json  ref_c_mel_numpy.json  ref_o_text.txt  reference_summary.json  reference_summary.md  whisper_apr_output.txt  whisper_cpp_output.txt
tests/: cli_parity_tests.rs  ground_truth_tests.rs  integration_transcribe.rs  pipeline_fuzz.rs  realizar_integration.rs
tools/: check_hf_weights.py  compare_layer_norm.py  compare_logits_hf.py  convert.rs  extract_filterbank.py  extract_ground_truth.py  generate_filterbank_const.py
(+152 files in other folders)
