[package]
name = "whisper-apr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "WASM-first automatic speech recognition engine implementing OpenAI Whisper"
license = "MIT"
repository = "https://github.com/paiml/whisper.apr"
documentation = "https://docs.rs/whisper-apr"
readme = "README.md"
keywords = ["whisper", "speech-recognition", "asr", "wasm", "audio"]
categories = ["multimedia::audio", "wasm", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "whisper-apr-cli"
path = "src/bin/whisper-apr-cli.rs"
required-features = ["cli"]

[features]
default = ["std", "simd", "realizar-inference"]
std = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
webgpu = ["wgpu"]
cuda = ["trueno/gpu"]
simd = []
parallel = ["rayon", "wasm-bindgen-rayon"]
tracing = ["dep:tracing"]
converter = ["reqwest", "serde", "serde_json", "tokio", "indicatif", "safetensors", "dirs", "zip"]
cli = ["clap", "serde", "serde_json", "tracing-subscriber", "hf-hub", "safetensors", "half"]
benchmark-tui = ["ratatui", "crossterm"]
tui = ["ratatui", "crossterm"]
# Use realizar's world-class inference primitives (attention, quantization, caching)
realizar-inference = ["dep:realizar"]

[dependencies]
# Core dependencies
thiserror = "2"

# SIMD acceleration (trueno integration)
trueno = "0.10.1"

# Model format (aprender is the canonical .apr format library)
# Note: safetensors-compare pulls hf-hub which doesn't support WASM
# Use target-specific deps below to enable it only for native builds
aprender = { version = "0.20", default-features = false }

# Inference primitives from realizar (shared attention, quantization, caching)
# This gives us: Flash Attention, Sliding Window, FusedLayerNorm, KVCache, PagedKV, Q4_K/Q6_K
realizar = { version = "0.3.3", optional = true, default-features = false }

# FFT for mel spectrogram computation
rustfft = "6.2"

# Optional: WASM bindings
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

# Optional: Tracing for renacer integration
tracing = { version = "0.1", optional = true }

# Optional: WebGPU compute backend
wgpu = { version = "23", optional = true }

# Optional: Parallel execution with Web Workers
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

# Optional: Converter dependencies
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
indicatif = { version = "0.17", optional = true }
safetensors = { version = "0.4", optional = true }
dirs = { version = "5", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

# Optional: CLI dependencies
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
hf-hub = { version = "0.3", optional = true }
half = { version = "2", optional = true }

# Optional: TUI benchmark dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
# WASM testing with Probar (Playwright-compatible testing framework)
jugar-probar = { version = "0.2", default-features = false }
# Tempfile for CLI tests
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Both getrandom versions need js/wasm_js feature for WASM
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Enable safetensors-compare only for native builds (pulls hf-hub which doesn't support WASM)
aprender = { version = "0.20", default-features = false, features = ["safetensors-compare"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3  # Use full optimization for native (was "z" for size - killed SIMD!)

[profile.release-wasm]
inherits = "release"
opt-level = 3  # Full optimization for WASM (was "z" - kills SIMD!)

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bench]]
name = "inference"
harness = false

[[bench]]
name = "wasm_simd"
harness = false

[[bench]]
name = "streaming_latency"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "format_comparison"
harness = false

[[bench]]
name = "cli_benchmarks"
harness = false

