[workspace]
resolver = "2"
members = [
    "realtime-transcription",
    "upload-transcription",
    "realtime-translation",
    "upload-translation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/paiml/whisper.apr"

[workspace.dependencies]
# Core whisper-apr library
whisper-apr = { path = ".." }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Testing with Probar (Playwright-compatible, pure Rust)
# Note: jugar-probar is the crates.io package name
probar = { package = "jugar-probar", version = "0.2", default-features = false }

# Property-based testing
proptest = "1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
