[workspace]
resolver = "2"
members = [
    "www-demo",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/paiml/whisper.apr"

[workspace.dependencies]
# Core whisper-apr library (with tracing for renacer integration)
whisper-apr = { path = "..", features = ["tracing"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Tracing (renacer-compatible instrumentation)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-wasm = "0.2"

# Testing with Probar (Playwright-compatible, pure Rust)
# Using local version with console capture support (Issue #8)
probar = { package = "jugar-probar", path = "../../probar/crates/probar", default-features = false, features = ["browser", "tui"] }

# Async runtime for browser tests
tokio = { version = "1", features = ["full"] }

# Property-based testing
proptest = "1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
