[package]
name = "whisper-apr-demo-realtime-transcription"
description = "Real-time microphone transcription demo for whisper-apr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel = ["whisper-apr/parallel"]

[dependencies]
whisper-apr = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook = "0.1"
tracing.workspace = true
tracing-wasm.workspace = true
web-sys = { workspace = true, features = [
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "DedicatedWorkerGlobalScope",
    "AudioContext",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioNode",
    "AudioWorkletNode",
    "AnalyserNode",
    "AudioBuffer",
    "AudioProcessingEvent",
    "BaseAudioContext",
    "ScriptProcessorNode",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "MediaDevices",
    "Navigator",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "DomTokenList",
    "console",
    # For model fetching
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

[dev-dependencies]
probar.workspace = true
proptest.workspace = true

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
