[package]
name = "whisper-apr-demo-realtime-translation"
description = "Real-time microphone translation demo for whisper-apr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whisper-apr.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook = "0.1"
web-sys = { workspace = true, features = [
    "AudioContext",
    "AudioWorkletNode",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaDevices",
    "Navigator",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "DomTokenList",
    "console",
] }

[dev-dependencies]
probar.workspace = true

[lints]
workspace = true
