[package]
name = "whisper-apr-demo-upload-transcription"
description = "Audio/video file upload transcription demo for whisper-apr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whisper-apr.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook = "0.1"
web-sys = { workspace = true, features = [
    "File",
    "FileReader",
    "Blob",
    "AudioContext",
    "AudioBuffer",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "ProgressEvent",
    "EventTarget",
    "Event",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "DomTokenList",
    "console",
] }

[dev-dependencies]
probar.workspace = true

[lints]
workspace = true
