[package]
name = "whisper-apr-demo-worker-transcription"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Web Worker-based transcription demo for whisper.apr"

[lib]
crate-type = ["cdylib"]

[features]
default = []
parallel = ["whisper-apr/parallel"]

[dependencies]
whisper-apr = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlInputElement",
    "Event",
    "MessageEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "DedicatedWorkerGlobalScope",
    "AudioContext",
    "AudioBuffer",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaStreamAudioSourceNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "File",
    "FileReader",
    "Navigator",
] }
tracing.workspace = true
tracing-wasm.workspace = true
console_error_panic_hook = "0.1"

[dev-dependencies]
probar.workspace = true

[lints]
workspace = true
